Refactor video player code and implement volume

--- a/PodTube/Client/Components/Playlists/SavePlaylistDialog/SavePlaylistDialog.razor
+++ b/PodTube/Client/Components/Playlists/SavePlaylistDialog/SavePlaylistDialog.razor
@@ -42,7 +42,13 @@
         if (client == null) {
             return;
         }
-        var playlists = await client.GetPlaylistsBasicAsync();
-        this.playlists = playlists;
+        try {
+            var playlists = await client.GetPlaylistsBasicAsync();
+            this.playlists = playlists;
+        } catch(ApiException e) {
+            if(e.StatusCode != 401) {
+                throw e;
+            }
+        }
     }
 }
