--- a/PodTube/Client/Pages/VideoPlayerPage.razor
+++ b/PodTube/Client/Pages/VideoPlayerPage.razor
@@ -6,18 +6,14 @@
 @using PodTube.Client.Rest;
 @inject NavigationManager Navigator
 @inject HttpClient httpClient
-<div class="container">
-    <MudPaper Class="pa-2">
-        <div class="video">
-            <MudPaper Height="111" Class="pa-2 my-2">
-                <PodTubeVideoPlayer Video="video" Placeholder="@video.Thumbnail"></PodTubeVideoPlayer>
-            </MudPaper>
-        </div>
-        <div class="info">
-            <MudPaper Class="pa-2 ">
-                <VideoInfo Video="video"></VideoInfo>
-            </MudPaper>
-        </div>
+<div class="video">
+    <MudPaper Height="111" Class="my-2">
+        <PodTubeVideoPlayer Video="video" Placeholder="@video.Thumbnail"></PodTubeVideoPlayer>
+    </MudPaper>
+</div>
+<div class="info">
+    <MudPaper Class="pa-2 ">
+        <VideoInfo Video="video"></VideoInfo>
     </MudPaper>
 </div>
 
