--- a/PodTube/Client/Shared/MainLayout.razor
+++ b/PodTube/Client/Shared/MainLayout.razor
@@ -23,7 +23,9 @@
     </ShowLoggedIn>
     
     <MudMainContent Style="height: 99vh;">
-        @Body
+        <MudContainer>
+            @Body
+        </MudContainer>
     </MudMainContent>
 </MudLayout>
 
