--- a/PodTube/Client/Shared/NavMenu.razor
+++ b/PodTube/Client/Shared/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿@using PodTube.Client.Components.Playlists.PlaylistNavBarList
 @using PodTube.Client.Components.Shared
-<MudPaper Width="250px" Class="py-3" Elevation="0">
+<MudPaper Class="py-3" Elevation="0">
     <PlaylistNavBarList></PlaylistNavBarList>
 </MudPaper>
 @code {
