--- a/PodTube/Client/Components/Shared/ShowLoggedIn.razor
+++ b/PodTube/Client/Components/Shared/ShowLoggedIn.razor
@@ -1,11 +1,13 @@
 ﻿@using PodTube.Client.Services;
-@inject LoginService LoginService
 
-@if (LoginService.IsLoggedIn) {
+@if (IsLoggedIn) {
     @ChildContent
 }
 
 @code {
     [Parameter]
     public RenderFragment ChildContent { get; set; }
+
+    [CascadingParameter]
+    public bool IsLoggedIn { get; set; } = false;
 }
