--- a/PodTube/Client/Pages/PlaylistPage.razor
+++ b/PodTube/Client/Pages/PlaylistPage.razor
@@ -26,7 +26,7 @@
     </MudCardHeader>
     <MudCardContent>
         <MudStack>
-            <PlaylistDisplay Videos="videos" VideoReordered="OnVideoReordered"></PlaylistDisplay>
+            <PlaylistDisplay Videos="videos" VideoReordered="OnVideoReordered" PlayPressed="OnVideoPlayPressed"></PlaylistDisplay>
         </MudStack>
     </MudCardContent>
 </MudCard>
@@ -72,5 +72,9 @@
                 videos.AddRange(videosPaged);
             }
         );
+    }
+
+    public void OnVideoPlayPressed(long id) {
+        Navigator.NavigateTo("/video/" + id);
     }
 }
