--- a/PodTube/Client/Pages/Index.razor
+++ b/PodTube/Client/Pages/Index.razor
@@ -2,7 +2,7 @@
 @using PodTube.Client.Components.Login
 @inject NavigationManager Navigator
 
-<MudPaper Class="ma-4" Elevation="0">
+<MudPaper Class="ma-2 pa-4" Elevation="0">
     <MudText Align="Align.Center" Typo="Typo.h2">Welcome!</MudText>
     <MudText Typo="Typo.h5">
         Introducing PodTube, the ultimate podcast app that enhances your listening experience by seamlessly incorporating visual content. Dive deeper into your favorite shows with presentation-type images that complement the audio. Discover, follow, and explore a vast library of podcasts. Enjoy a dynamic blend of audio and visuals, creating an immersive experience. Create personalized playlists, engage with the podcasting community, and immerse yourself in the world of podcasts like never before with PodTube.
