--- a/PodTube/Client/Components/Videos/VideoPlayer/PodTubeVideoPlayer.razor
+++ b/PodTube/Client/Components/Videos/VideoPlayer/PodTubeVideoPlayer.razor
@@ -1,5 +1,6 @@
 ﻿@using PodTube.Shared.Models.DTO;
 @inject IJSRuntime js;
+@implements IAsyncDisposable;
 
 <MudStack Spacing="0">
     <MudImage Src="@CurrentFrame" ObjectFit="ObjectFit.Contain" Fluid="true" Elevation="0" Class="video-image rounded-lg" Style="max-height: 75vh;" />
@@ -150,6 +151,12 @@
         if(Volume != value) {
             await SetVolumeJS(value);
             Volume = value;
+        }
+    }
+
+    public async ValueTask DisposeAsync() {
+        if (componentJs is not null) {
+            await componentJs.DisposeAsync();
         }
     }
 }
